# dioxus_with_axum_login

./: .env.production  .gitignore  Cargo.toml  Dioxus.toml  README.md
migrations/: 20250502175812_setup_auth.sql  20250502192522_items.sql
src/: backend.rs  main.rs
